<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of crime:</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>

    <string name="serious_crime">Serious Crime</string>
    <string name="delete_crime">Delete crime</string>

    <string name="empty_alert">Nothing there!</string>
    <string name="add_button_on_empty">Add new crime</string>

    <!--<string name="subtitle_format">%1$d crimes</string>-->
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s %4$s, and %5$s </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>

    <string name="crime_report_serious">and serious</string>
    <string name="crime_report_notserious">and not serious</string>

    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crimpe_suspect_call">Call to suspect!</string>

</resources>
